setup file created

--- a/support.ipynb
+++ b/support.ipynb
@@ -14,10 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "#create folder and file\n",
     "import os\n",
     "from pathlib import Path\n",
     "\n",
@@ -44,6 +45,16 @@
     "            pass\n",
     "    else:\n",
     "        print (\"file is already exist\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# install local package \n",
+    "# 1.pip install .\n",
+    "# or\n",
+    "# 3.setup.py"
    ]
   }
  ],
