model_training file updated

--- a/notebooks/data/model_training.ipynb
+++ b/notebooks/data/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "[193573 rows x 10 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
        "[193573 rows x 3 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
        "Index(['id', 'carat', 'depth', 'table', 'x', 'y', 'z'], dtype='object')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
        "         3.        ,  1.        ]])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +557,7 @@
        "         2.00000000e+00,  1.00000000e+00,  3.00000000e+00]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +580,7 @@
        "       'cat_pipeline__clarity'], dtype=object)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -738,13 +738,293 @@
        "4                2.0                  5.0                    2.0  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "x_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_pipeline__id</th>\n",
+       "      <th>num_pipeline__carat</th>\n",
+       "      <th>num_pipeline__depth</th>\n",
+       "      <th>num_pipeline__table</th>\n",
+       "      <th>num_pipeline__x</th>\n",
+       "      <th>num_pipeline__y</th>\n",
+       "      <th>num_pipeline__z</th>\n",
+       "      <th>cat_pipeline__cut</th>\n",
+       "      <th>cat_pipeline__color</th>\n",
+       "      <th>cat_pipeline__clarity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-1.464136</td>\n",
+       "      <td>-0.629077</td>\n",
+       "      <td>0.258230</td>\n",
+       "      <td>-0.120630</td>\n",
+       "      <td>-0.600482</td>\n",
+       "      <td>-0.581521</td>\n",
+       "      <td>-0.572248</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.231957</td>\n",
+       "      <td>2.605374</td>\n",
+       "      <td>-2.148014</td>\n",
+       "      <td>-0.120630</td>\n",
+       "      <td>2.126042</td>\n",
+       "      <td>2.198832</td>\n",
+       "      <td>1.959219</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.000078</td>\n",
+       "      <td>-1.125026</td>\n",
+       "      <td>-1.222536</td>\n",
+       "      <td>0.921902</td>\n",
+       "      <td>-1.374347</td>\n",
+       "      <td>-1.414721</td>\n",
+       "      <td>-1.469110</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.873897</td>\n",
+       "      <td>-1.017211</td>\n",
+       "      <td>-0.574701</td>\n",
+       "      <td>0.921902</td>\n",
+       "      <td>-1.158385</td>\n",
+       "      <td>-1.161138</td>\n",
+       "      <td>-1.194265</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.392716</td>\n",
+       "      <td>0.858771</td>\n",
+       "      <td>0.628421</td>\n",
+       "      <td>-0.641897</td>\n",
+       "      <td>0.947248</td>\n",
+       "      <td>0.985258</td>\n",
+       "      <td>1.004495</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   num_pipeline__id  num_pipeline__carat  num_pipeline__depth  \\\n",
+       "0         -1.464136            -0.629077             0.258230   \n",
+       "1          1.231957             2.605374            -2.148014   \n",
+       "2         -0.000078            -1.125026            -1.222536   \n",
+       "3          0.873897            -1.017211            -0.574701   \n",
+       "4          0.392716             0.858771             0.628421   \n",
+       "\n",
+       "   num_pipeline__table  num_pipeline__x  num_pipeline__y  num_pipeline__z  \\\n",
+       "0            -0.120630        -0.600482        -0.581521        -0.572248   \n",
+       "1            -0.120630         2.126042         2.198832         1.959219   \n",
+       "2             0.921902        -1.374347        -1.414721        -1.469110   \n",
+       "3             0.921902        -1.158385        -1.161138        -1.194265   \n",
+       "4            -0.641897         0.947248         0.985258         1.004495   \n",
+       "\n",
+       "   cat_pipeline__cut  cat_pipeline__color  cat_pipeline__clarity  \n",
+       "0                4.0                  0.0                    2.0  \n",
+       "1                2.0                  3.0                    1.0  \n",
+       "2                3.0                  1.0                    6.0  \n",
+       "3                3.0                  5.0                    6.0  \n",
+       "4                4.0                  4.0                    2.0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_test.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# linear regression\n",
+    "# ridge regression\n",
+    "# lasso regression\n",
+    "# elastic regression\n",
+    "from sklearn.linear_model import LinearRegression,Lasso,ElasticNet,Ridge\n",
+    "from sklearn.metrics import r2_score,mean_absolute_error,mean_squared_error\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models={\n",
+    "    'linearReression': LinearRegression(),\n",
+    "    'Lasso':Lasso(),\n",
+    "    'Ridge':Ridge(),\n",
+    "    'Elastic':ElasticNet()}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trained_model_list=[]\n",
+    "model_list=[]\n",
+    "r2_list=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "def evaluate_model(true,predict):\n",
+    "    mae=mean_absolute_error(true,predict)\n",
+    "    mse=mean_squared_error(true,predict)\n",
+    "    rmse=np.sqrt(mean_squared_error(true,predict))\n",
+    "    r2_square=r2_score(true,predict)\n",
+    "    return mae,rmse,r2_square"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "linearReression\n",
+      "model training performance\n",
+      "RMSE: 1014.6337606682042\n",
+      "MAE: 675.0760335549247\n",
+      "R2_SCORE: 0.9362901674122803\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Lasso\n",
+      "model training performance\n",
+      "RMSE: 1014.6607134895941\n",
+      "MAE: 676.3783916049508\n",
+      "R2_SCORE: 0.9362867825800139\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Ridge\n",
+      "model training performance\n",
+      "RMSE: 1014.63842140788\n",
+      "MAE: 675.1090061532639\n",
+      "R2_SCORE: 0.9362895821062558\n",
+      "===================================\n",
+      "\n",
+      "\n",
+      "Elastic\n",
+      "model training performance\n",
+      "RMSE: 1513.662539824099\n",
+      "MAE: 1051.18036294437\n",
+      "R2_SCORE: 0.8582098792147982\n",
+      "===================================\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(list(models))):\n",
+    "    model=list(models.values())[i]\n",
+    "    model.fit(x_train,y_train)\n",
+    "    #prediction\n",
+    "    y_predict=model.predict(x_test)\n",
+    "\n",
+    "    #this is validation test score\n",
+    "\n",
+    "    mae,rmse,r2_square=evaluate_model(y_test,y_predict)\n",
+    "\n",
+    "    print(list(models.keys())[i])\n",
+    "    model_list.append( (list(models.keys())[i]))\n",
+    "\n",
+    "    print (\"model training performance\")\n",
+    "    print(\"RMSE:\",rmse)\n",
+    "    print(\"MAE:\",mae)\n",
+    "    print(\"R2_SCORE:\",r2_square)\n",
+    "    r2_list.append(r2_square)\n",
+    "\n",
+    "    print(\"=\"*35)\n",
+    "    print(\"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'dict'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "list(models)\n",
+    "models.values()\n",
+    "print(type(models))\n"
    ]
   }
  ],
