model_training updated

--- a/notebooks/data/model_training.ipynb
+++ b/notebooks/data/model_training.ipynb
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -955,32 +955,24 @@
       "MAE: 675.0760335549247\n",
       "R2_SCORE: 0.9362901674122803\n",
       "===================================\n",
-      "\n",
-      "\n",
       "Lasso\n",
       "model training performance\n",
       "RMSE: 1014.6607134895941\n",
       "MAE: 676.3783916049508\n",
       "R2_SCORE: 0.9362867825800139\n",
       "===================================\n",
-      "\n",
-      "\n",
       "Ridge\n",
       "model training performance\n",
       "RMSE: 1014.63842140788\n",
       "MAE: 675.1090061532639\n",
       "R2_SCORE: 0.9362895821062558\n",
       "===================================\n",
-      "\n",
-      "\n",
       "Elastic\n",
       "model training performance\n",
       "RMSE: 1513.662539824099\n",
       "MAE: 1051.18036294437\n",
       "R2_SCORE: 0.8582098792147982\n",
-      "===================================\n",
-      "\n",
-      "\n"
+      "===================================\n"
      ]
     }
    ],
@@ -1005,26 +997,27 @@
     "    r2_list.append(r2_square)\n",
     "\n",
     "    print(\"=\"*35)\n",
-    "    print(\"\\n\")"
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'dict'>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "['linearReression', 'Lasso', 'Ridge', 'Elastic']"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(models)\n",
-    "models.values()\n",
-    "print(type(models))\n"
+    "model_list\n"
    ]
   }
  ],
