--- a/support.ipynb
+++ b/support.ipynb
@@ -56,6 +56,55 @@
     "# or\n",
     "# 3.setup.py"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "class CustomException(Exception):\n",
+    "    def __init__(self,error_message,error_details:sys):\n",
+    "        self.error_message=error_message\n",
+    "        _,_,exe_tb=error_details.exc_info()\n",
+    "\n",
+    "        self.line_no=exe_tb.tb_lineno\n",
+    "        self.file_name=exe_tb.tb_frame.f_code.co_filename\n",
+    "    def __str__(self):\n",
+    "        return f\"error occured in python script name [{self.file_name}] line no [{self.line_no}] error message [{str(self.error_message)}]\"\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "CustomException",
+     "evalue": "error occured in python script name [C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_8056\\2044571646.py] line no [2] error message [division by zero]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32mf:\\I-Neuron\\22-OCT-END-TO-END-PROJECT\\support.ipynb Cell 5\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/I-Neuron/22-OCT-END-TO-END-PROJECT/support.ipynb#W4sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/f%3A/I-Neuron/22-OCT-END-TO-END-PROJECT/support.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     a\u001b[39m=\u001b[39m\u001b[39m1\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m0\u001b[39;49m\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/I-Neuron/22-OCT-END-TO-END-PROJECT/support.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mCustomException\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32mf:\\I-Neuron\\22-OCT-END-TO-END-PROJECT\\support.ipynb Cell 5\u001b[0m line \u001b[0;36m4\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/I-Neuron/22-OCT-END-TO-END-PROJECT/support.ipynb#W4sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m     a\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m0\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/I-Neuron/22-OCT-END-TO-END-PROJECT/support.ipynb#W4sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mException\u001b[39;00m \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m----> <a href='vscode-notebook-cell:/f%3A/I-Neuron/22-OCT-END-TO-END-PROJECT/support.ipynb#W4sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39mraise\u001b[39;00m CustomException(e,sys)\n",
+      "\u001b[1;31mCustomException\u001b[0m: error occured in python script name [C:\\Users\\acer\\AppData\\Local\\Temp\\ipykernel_8056\\2044571646.py] line no [2] error message [division by zero]"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    a=1/0\n",
+    "except Exception as e:\n",
+    "    raise CustomException(e,sys)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
